demo/nuklear_sdl_gl3.d

    enum NK_FORMAT_R32G32B32A32_DOUBLE = nk_draw_vertex_layout_format.NK_FORMAT_R32G32B32A32_DOUBLE;
    enum NK_FORMAT_RGB32 = nk_draw_vertex_layout_format.NK_FORMAT_RGB32;
    enum NK_FORMAT_RGBA32 = nk_draw_vertex_layout_format.NK_FORMAT_RGBA32;
    enum NK_FORMAT_COLOR_END = nk_draw_vertex_layout_format.NK_FORMAT_COLOR_END;
    enum NK_FORMAT_COUNT = nk_draw_vertex_layout_format.NK_FORMAT_COUNT;


    struct nk_draw_vertex_layout_element
    {
        nk_draw_vertex_layout_attribute attribute;
        nk_draw_vertex_layout_format format;
        nk_size offset;
    }
    struct nk_draw_command
    {
        uint elem_count;
        nk_rect clip_rect;
        nk_handle texture;
    }
    struct nk_draw_list
    {
        nk_rect clip_rect;
        nk_vec2[12] circle_vtx;
        nk_convert_config config;
        nk_buffer* buffer;
        nk_buffer* vertices;
        nk_buffer* elements;
        uint element_count;
        uint vertex_count;
        uint cmd_count;
        nk_size cmd_offset;
        uint path_count;
        uint path_offset;
        nk_anti_aliasing line_AA;
        nk_anti_aliasing shape_AA;
    }
    void nk_draw_list_init(nk_draw_list*) @nogc nothrow;

